--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,3 +338,35 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
+
+#list .text {
+    overflow-y: scroll;
+    padding-left: 25px;
+    height: 70vh;
+}
+
+#list ul {
+    margin: 0;
+    margin-top: 10px;
+    padding: 0;
+    list-style-type: decimal;
+    font-size: 16px;
+}
+
+#list ul li {
+    margin: 5px 0;
+}
+
+#list ul li .attendee {
+    width: 60px;
+    color: #42fd4a;
+}
+
+#list ul li .attendee.red {
+    color: #ff1b1b;
+}
+
+#user h1.underline {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 10px;
+}
