--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,6 +380,7 @@ body {
     overflow: hidden;
     width: 100%;
 }
+
 .amount-form input {
     width: 100%;
     border: 1px solid #ddd;
@@ -387,6 +388,7 @@ body {
     outline: none;
     color: #000;
 }
+
 .amount-form .btn {
     position: absolute;
     right: 0;
@@ -395,7 +397,6 @@ body {
     height: 100%;
     border-radius: 0;
 }
-
 
 @media only screen and (min-device-width: 340px) {
     .status {
@@ -413,4 +414,20 @@ body {
     .status {
         bottom: -35px;
     }
+}
+
+* {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+input {
+    -webkit-user-select: auto !important;
+    -khtml-user-select: auto !important;
+    -moz-user-select: auto !important;
+    -ms-user-select: auto !important;
+    user-select: auto !important;
 }
