--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,23 +213,19 @@ body {
 
 .sidenav {
     height: 100%;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
+    width: 0px;
     position: fixed;
-    /* Stay in place */
     z-index: 100;
-    /* Stay on top */
     top: 0;
     left: 0;
     background-color: #111;
-    /* Black*/
     overflow-x: hidden;
-    /* Disable horizontal scroll */
     padding-top: 60px;
-    /* Place content 60px from the top */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in the sidenav */
+    transition: all ease 0.4s;
+}
+
+.sidenav.open {
+    width: 250px;
 }
 
 
@@ -374,8 +370,9 @@ body {
     border: 0;
     color: #000;
     width: 100%;
-    padding: 10px; 
+    padding: 10px;
 }
+
 #list .btn-success {
     border-radius: 0;
     width: 100%;
@@ -435,7 +432,6 @@ input {
 button {
     outline: none !important;
 }
-
 
 .overlay {
     width: 100%;
