--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,18 +270,12 @@ body {
 
 .menubutton {
     position: absolute;
-    width: 66px;
-    height: 60px;
-    padding: 20px;
-    left: 0;
-    top: 20px;
+    margin-top: 40px;
 }
 
 .menubutton img {
-    width: 100%;
-    display: block;
+    width: 50%;
 }
-
 
 /* The Modal (background) */
 
