--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,10 @@ body {
     right: 0;
     bottom: 0;
     opacity: 0.2;
-    z-index: 1;
+    z-index: 0;
 }
 
 .container {
-    z-index: 2;
     position: relative;
 }
 
@@ -214,25 +213,19 @@ body {
 
 .sidenav {
     height: 100%;
-    /* 100% Full-height */
-    width: 0;
-    /* 0 width - change this with JavaScript */
+    width: 250px;
     position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Stay on top */
+    z-index: 100;
     top: 0;
-    left: 0;
+    left: -250px;
     background-color: #111;
-    /* Black*/
     overflow-x: hidden;
-    /* Disable horizontal scroll */
     padding-top: 60px;
-    /* Place content 60px from the top */
-    transition: 0.5s;
-    /* 0.5 second transition effect to slide in the sidenav */
+    transition: all ease 0.4s;
 }
-
+.sidenav.open {
+    left: 0px;
+}
 
 /* The navigation menu links */
 
@@ -274,11 +267,17 @@ body {
 
 .menubutton {
     position: absolute;
-    margin-top: 40px;
+    width: 66px;
+    height: 60px;
+    padding: 20px;
+    left: 0;
+    top: 20px;
+    z-index: 99;
 }
 
 .menubutton img {
-    width: 50%;
+    width: 100%;
+    display: block;
 }
 
 
@@ -366,6 +365,19 @@ body {
     color: #42fd4a;
 }
 
+#list input {
+    border: 0;
+    color: #000;
+    width: 100%;
+    padding: 10px; 
+}
+#list .btn-success {
+    border-radius: 0;
+    width: 100%;
+    margin-top: 10px;
+    height: 40px;
+}
+
 #list ul li .attendee.red {
     color: #ff1b1b;
 }
@@ -398,6 +410,39 @@ body {
     border-radius: 0;
 }
 
+* {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+input {
+    -webkit-user-select: auto !important;
+    -khtml-user-select: auto !important;
+    -moz-user-select: auto !important;
+    -ms-user-select: auto !important;
+    user-select: auto !important;
+    outline: none;
+}
+
+button {
+    outline: none !important;
+}
+
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+}
+
 @media only screen and (min-device-width: 340px) {
     .status {
         bottom: -20px;
@@ -414,20 +459,4 @@ body {
     .status {
         bottom: -35px;
     }
-}
-
-* {
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-input {
-    -webkit-user-select: auto !important;
-    -khtml-user-select: auto !important;
-    -moz-user-select: auto !important;
-    -ms-user-select: auto !important;
-    user-select: auto !important;
 }
