--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,31 @@ body {
 }
 
 
+/*Past Match*/
+
+.datepicker {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 15px;
+}
+
+.datepicker select {
+    background: transparent;
+    border: 0;
+    border-bottom: 2px solid #fff;
+    width: 100%;
+    padding: 5px;
+    outline: none;
+    font-size: 18px;
+    color: #42fd4a;
+}
+
+.datepicker p {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 5px 0;
+}
+
+
 /* The navigation menu */
 
 .sidenav {
@@ -428,6 +453,8 @@ input {
     -ms-user-select: auto !important;
     user-select: auto !important;
     outline: none;
+    -webkit-appearance: none;
+    border-radius: 0;
 }
 
 button {
