--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,7 +371,7 @@ body {
 
 #list .text {
     overflow-y: scroll;
-    padding-left: 25px;
+    padding-left: 28px;
     height: 70vh;
 }
 
@@ -397,6 +397,13 @@ body {
     color: #000;
     width: 100%;
     padding: 10px;
+    -webkit-appearance: none;
+    border-radius: 0;
+}
+
+.modal input {
+    -webkit-appearance: none;
+    border-radius: 0;
 }
 
 #list .btn-success {
@@ -453,6 +460,9 @@ input {
     -ms-user-select: auto !important;
     user-select: auto !important;
     outline: none;
+}
+
+select {
     -webkit-appearance: none;
     border-radius: 0;
 }
